--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 
-<body style="background-color: #1abc9c">
+<body style="background-color: silver;">
     <h1 style="padding-top: 20%; padding-bottom: 20%;text-align: center;color: white;">location de voitures anciennes</h1>
 </body>
 
